Try to fix about page text alignment

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -2,7 +2,8 @@
     margin-top: 125px
 
     > h1
-        text-align: center
+        text-align: right
+        // originally was center
         margin-bottom: 6rem
 
 .about
